# rust-console

./: .gitignore  Cargo.toml  index.html  main.go  readme.md
src/: main.rs  router.rs
src/apis/: apiv1.rs  app.rs  mod.rs  namespace.rs  test.rs
src/components/: app.rs  base.rs  daemonsets.rs  deploy.rs  event.rs  form.rs  jobs.rs  main.css  mod.rs  node.rs  pod.rs  pod_detail.rs  selectns.rs  services.rs  statefulsets.rs  test.rs
src/components/detail/: deploy.rs  mod.rs  pod.rs
src/components/list/: base.rs  daemonsets.rs  deploy.rs  event.rs  jobs.rs  mod.rs  node.rs  pod.rs  services.rs  statefulsets.rs
src/element_ui/: base.rs  button.rs  checkbox.rs  el_select.rs  form.rs  input.rs  inputnum.rs  mod.rs  select.rs  switch.rs  table.rs
src/elementui/: base.rs  mod.rs
src/helper/: address.rs  event_bus.rs  js.rs  message.rs  mod.rs  modal.rs  pagination.rs  router.rs  utils.rs  websocket.rs
