[package]
name = "rust-console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stylist = { version = "0.10.1", features = ["yew"] }
gloo = "0.8.0"
yew = "0.19"
wasm-bindgen = "0.2.82"
#wasm-bindgen-futures 实现前端中的Promise
wasm-bindgen-futures = "0.4.33"
gloo-net = "0.2.4"
#serde用于序列化和反序列化
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
yew-router = "0.16.0"
[dependencies.web-sys]
version = "0.3.60"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
]
[dependencies.uuid]
version = "1.1.2"
features = [
    "js",
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]