[package]
name = "rust-console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stylist = { version = "0.10.1", features = ["yew"] }
yew = "0.19"
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.33"
gloo-net = "0.2.4"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
yew-router = "0.16.0"
reqwasm = "0.5.0"
futures = "0.3.25"
log = "0.4.6"
wasm-logger = "0.2.0"
yew-agent = "0.1.0"
gloo-utils = "0.1.5"

[dependencies.web-sys]
version = "0.3.60"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
]
[dependencies.uuid]
version = "1.1.2"
features = [
    "js",
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]